<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Toolbar עליון -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Theme.Roomatch.secondary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="right"
            android:background="@color/Sky_blue"
            android:foregroundGravity="right"
            android:gravity="right"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="הדירות שלי" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Search bar -->
    <androidx.appcompat.widget.SearchView
        android:id="@+id/searchViewOwner"
        style="@style/Theme.Roomatch.secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:iconifiedByDefault="false"
        android:queryHint="חפש לפי עיר, רחוב או תיאור"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout" />

    <!-- פילטרים -->
    <LinearLayout
        android:id="@+id/filterLayoutOwner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchViewOwner">

        <Spinner
            android:id="@+id/spinnerOwnerFilterField"
            style="@style/Theme.Roomatch.secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/spinnerOwnerOrder"
            style="@style/Theme.Roomatch.secondary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1" />

        <!--        <Button-->
        <!--            android:id="@+id/buttonOwnerFilter"-->
        <!--            style="@style/button_style"-->
        <!--            android:layout_width="30dp"-->
        <!--            android:layout_height="30dp"-->
        <!--            android:layout_marginEnd="4dp"-->
        <!--            android:background="@mipmap/ic_filter_foreground" />-->

        <TextView
            android:id="@+id/textViewTestMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text="" />


        <!--        <Button-->
        <!--            android:id="@+id/buttonOwnerClear"-->
        <!--            style="@style/button_style"-->
        <!--            android:layout_width="35dp"-->
        <!--            android:layout_height="35dp"-->
        <!--            android:background="@android:drawable/ic_menu_close_clear_cancel" />-->
    </LinearLayout>

    <!-- רשימת הדירות -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewOwnerApartments"
        style="@style/Theme.Roomatch"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="רשימת הדירות שלי"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filterLayoutOwner" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewOwnerApartments"
        app:layout_constraintEnd_toEndOf="@+id/recyclerViewOwnerApartments">

        <ImageButton
            android:id="@+id/buttonAddApartments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/ic_plus_round"
            app:srcCompat="@color/selectableItemBackground" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>