...

    <!-- שדות כתובת -->
    <EditText
        android:id="@+id/editCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="עיר"
        android:inputType="text" />

    <EditText
        android:id="@+id/editStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
...
