...
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_weight="0"
                        android:background="@android:drawable/ic_menu_edit" />

                    <ImageButton
                        android:id="@+id/buttonDeleteApartment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/delete_apartment"
                        app:srcCompat="@android:drawable/ic_menu_delete"
                        app:tint="@color/errorRed" />
...
